--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "postcss": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-simple-img": "^2.3.9",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
